btsync-gui (0.6-1) unstable; urgency=low

  * Folder status now takes in account and shows folder errors
    (Closes #72)

 -- Leo Moll <leo.moll@yeasoft.com>  Sat, 01 Mar 2014 13:44:59 +0100

btsync-gui (0.5-1) unstable; urgency=low

  * Added support for libindicator3 in order to support
    desktops like Unity (Closes #69)
  * Added authentication by default in autogenerated config file.
    This is far from what we really should do but at least a
    little step in the right direction.
  * Logging is now also written to ${HOME}/.btsync/btsync-gui.log
    (Closes #70)
  * Fixed broken representation of special characters in folder
    names (Closes #71)
  * Split package in btsync-user-gtk (without dependencies to
    gir1.2-appindicator3-0.1) for usage on systems with a GTK
    based shell and btsync-user (that depends on btsync-user-gtk
    and gir1.2-appindicator3-0.1) for systems with shells that
    need libappindicator like Unity

 -- Leo Moll <leo.moll@yeasoft.com>  Sat, 01 Mar 2014 13:44:59 +0100

btsync-gui (0.4-1) unstable; urgency=low

  * Implemented folder add routine (Closes #63)
  * Implemented folder context menu with
    - Copy secret
    - Connect mobile device
    - Open Syncarchive
    - Open shared folder on double click
    - Show folder preferences
  * Implemented editing of folder preferences (Closes #64):
    - Change the folder secret
    - Change all folder settings

 -- Leo Moll <leo.moll@yeasoft.com>  Mon, 24 Feb 2014 15:55:01 +0100

btsync-gui (0.3-1) unstable; urgency=low

  * The @contextmanager has been completely replaced by a brand
    new singleton implementation that fixes all reported issues
    and does not fail on first start (Closes #68)
  * Syntax error in exception handler of BtSyncApi produced a
    cascade of exceptions preventing application shutdown
  * Folder list will now be updated once per second
  * Application version is shown correctly

 -- Leo Moll <leo.moll@yeasoft.com>  Fri, 21 Feb 2014 23:12:59 +0100
