@@ -2,8 +2,9 @@ btsync-gui (0.6-1) unstable; urgency=low
 
   * Folder status now takes in account and shows folder errors
     (Closes #72)
+  * Show the device status on the "Devices" tab (Closes #73)
 
- -- Leo Moll <leo.moll@yeasoft.com>  Sat, 01 Mar 2014 13:44:59 +0100
+ -- Leo Moll <leo.moll@yeasoft.com>  Sun, 02 Mar 2014 15:33:21 +0100
 
 btsync-gui (0.5-1) unstable; urgency=low
 
